# speak-to-user

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  ROADMAP.md  WORKFLOWS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  manual-model-e2e.yml
app/: __init__.py  playback_job.py  prompts.py  resources.py  runtime.py  server.py  text_chunking.py  tools.py
benchmarks/: live-verification-2026-03-28-service-v1.json  live-verification-2026-03-28-service-v1.md  live-verification-2026-03-28.json  live-verification-2026-03-28.md
launchd/: com.galew.speak-to-user.dev.plist  com.galew.speak-to-user.stable.plist
scripts/: run_e2e_tests.sh  run_service.sh  summarize_stable_log.py  wait_for_service_ready.sh
tests/: test_e2e_model_routes.py  test_runtime.py  test_server.py  test_summarize_stable_log.py  test_tools.py
