[project]
name = "speak-to-user"
version = "0.4.0"
description = "A localhost FastMCP server for coding agents to interact with users via text to speech."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "qwen-tts",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers==4.57.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers -m \"not e2e\""
testpaths = ["tests"]
markers = [
    "e2e: optional HTTP end-to-end tests that load the real models",
    "serial: tests that must run alone because of memory-heavy model usage",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["qwen_tts", "sounddevice", "soundfile"]
ignore_missing_imports = true
