[project]
name = "speak-to-user"
version = "0.4.5"
description = "A localhost FastMCP server for coding agents to interact with users via text to speech."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "mlx-audio[tts]>=0.3.0",
    "numpy>=1.26.4",
    "sounddevice==0.5.3",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers -m \"not e2e\""
testpaths = ["tests"]
markers = [
    "e2e: optional HTTP end-to-end tests that load the real models",
    "serial: tests that must run alone because of memory-heavy model usage",
]

[tool.coverage.run]
branch = true
source = ["app"]
data_file = ".coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mlx_audio", "mlx_audio.*", "sounddevice", "soundfile"]
ignore_missing_imports = true
